-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 14
-
Component/s: hotspot
-
b26
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8261517 | 13.0.7 | Ekaterina Vergizova | P2 | Resolved | Fixed | b02 |
When the sweeper yields to refill ICStubs, it should keep it alive by calling the nmethod entry barrier, so that GCs get less surprised about finding nmethods that have never passed nmethod entry barriers seemingly being on-stack.
- backported by
-
JDK-8261517 Sweeper should keep current nmethod alive before yielding for ICStub refills
-
- Resolved
-