8234662: Sweeper should keep current nmethod alive before yielding for ICStub refills

Reviewed-by: pliden, stefank